--- a/css/style.css
+++ b/css/style.css
@@ -1897,18 +1897,63 @@ blockquote, blockquote p {
   padding: 0.125rem 0.25rem 0;
   border-radius: 3px; }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+
+a {
+  text-decoration: none;
+  color: black; }
+
+header {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color: #f1f1f1; }
+
 .logo {
-  position: relative; }
+  position: absolute;
+  transform: translate3d(0, 30%, 0);
+  width: 100%; }
   .logo svg {
-    position: absolute;
-    width: 500px;
-    top: 0;
-    left: 30%; }
+    width: 25%;
+    display: block;
+    margin: 0 auto;
+    fill: #4194ff; }
 
-.logo svg:hover {
-  fill: #f23154; }
+.load {
+  width: 100%;
+  position: absolute;
+  bottom: 25%; }
+  .load svg {
+    display: block;
+    margin: 0 auto;
+    fill: none;
+    width: 80px; }
+    .load svg .circlebg {
+      stroke: #ccc;
+      stroke-width: 3; }
+    .load svg .circle {
+      stroke: #0062da;
+      stroke-width: 3; }
 
-body {
-  background-color: pink; }
+section {
+  display: none; }
+
+nav {
+  width: 100%; }
+  nav .main-nav {
+    display: flex;
+    width: 60%;
+    border: 1px solid yellow; }
+    nav .main-nav li {
+      width: 33.33333%;
+      border: 1px solid red; }
+      nav .main-nav li a {
+        border: 1px solid blue;
+        display: block;
+        padding: 10px;
+        text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
