--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 @import '_normalize.scss';
 @import '_grid.scss';
-$blue:#4194ff;
-$blue2:darken(#4194ff,20%);
+$blue:#fd357a;
+$blue2:darken($blue,15%);
 ul{
 	padding: 0;
 	margin: 0;
@@ -20,7 +20,7 @@ header{
 }
 .logo{
 	position: absolute;
-	transform: translate3d(0,30%,0);
+	transform: translate3d(0,77%,0);
 	width: 100%;
 	svg{
 		width: 25%;
@@ -32,19 +32,20 @@ header{
 .load{
 	width: 100%;
 	position: absolute;
-	bottom: 25%;
+	bottom: 45%;
 	svg{
 		display: block;
 		margin: 0 auto;
 		fill:none;
 		width: 80px;
+		transform: scale(8);
 		.circlebg{
 			stroke:#ccc;
-			stroke-width:3;
+			stroke-width:1;
 		}
 		.circle{
 			stroke:$blue2;
-			stroke-width:3;
+			stroke-width:1;
 		}
 			
 	}
