--- a/css/style.css
+++ b/css/style.css
@@ -1909,6 +1909,7 @@ a {
 header {
   height: 100%;
   width: 100%;
+  z-index: 100;
   position: fixed;
   background-color: #f1f1f1; }
 
@@ -1938,6 +1939,61 @@ header {
     .load svg .circle {
       stroke: #e30251;
       stroke-width: 1; }
+
+.start .logo, .start .load {
+  opacity: 1;
+  animation: animInitialHeader 1s cubic-bezier(0.7, 0, 0.3, 1) both; }
+
+.start .load {
+  animation: load-start-expand 0.5s ease 1.1s both; }
+
+@keyframes animInitialHeader {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 800px, 0); } }
+
+@keyframes load-start-expand {
+  from {
+    opacity: 0;
+    transform: scale(0); } }
+
+.start .circle {
+  animation: loading-fx 3s cubic-bezier(0.17, 0.67, 0.87, 0.17) 1.8s both; }
+
+@keyframes loading-fx {
+  to {
+    stroke-dashoffset: 0; } }
+
+.end .logo {
+  animation: logo-move-up 1s cubic-bezier(0.7, 0, 0.3, 1) both; }
+  .end .logo svg {
+    animation: svg-fx 1s linear both; }
+
+.end .load svg {
+  animation: remove-load 1s ease both; }
+  .end .load svg .circlebg {
+    stroke: #e30251; }
+
+.end header {
+  animation: color-change 1s linear both; }
+
+@keyframes remove-load {
+  to {
+    transform: scale(0);
+    opacity: 0; } }
+
+@keyframes color-change {
+  to {
+    background-color: #fd357a; } }
+
+@keyframes svg-fx {
+  to {
+    width: 250px;
+    fill: #fff; } }
+
+@keyframes logo-move-up {
+  to {
+    transform: translate3d(0, 10%, 0); } }
 
 section {
   display: none; }
