--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ a{
 header{
 	height:100%;
 	width:100%;
+	z-index: 100;
 	position: fixed;
 	background-color: #f1f1f1;
 }
@@ -50,6 +51,88 @@ header{
 			
 	}
 }
+///////////////////////////////////////////////////////////////////////////////////////
+.start .logo,
+.start .load {
+    opacity: 1;
+    animation: animInitialHeader 1s cubic-bezier(0.7,0,0.3,1) both;
+}
+ .start .load{
+	 animation: load-start-expand .5s ease 1.1s both;
+ }
+@keyframes animInitialHeader {
+    from {
+        opacity: 0;
+        transform: translate3d(0,800px,0);
+    }
+}
+@keyframes load-start-expand {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
+
+.start .circle{
+	animation: loading-fx 3s cubic-bezier(.17,.67,.87,.17) 1.8s both;
+	
+}
+@keyframes loading-fx{
+	to{
+		stroke-dashoffset:0;
+	}
+}
+//////////////////////////////////////////////////////////////////////////////////////
+.end .logo{
+	animation:logo-move-up 1s cubic-bezier(0.7,0,0.3,1) both; 
+	svg{
+		animation: svg-fx 1s linear both;
+	}
+}
+
+.end .load svg{
+	animation: remove-load 1s ease both;
+
+	 .circlebg{
+		stroke:$blue2;
+	}
+}
+
+.end header{
+	animation: color-change 1s linear both;
+}
+@keyframes remove-load {
+	to{
+		transform: scale(0);
+		opacity: 0;
+	}
+}
+@keyframes color-change {
+	to{
+		background-color: $blue;
+	}
+}
+@keyframes svg-fx {
+	to{
+		width:250px;
+		fill:#fff;
+	}
+}
+
+@keyframes logo-move-up{
+	to{
+		transform: translate3d(0,10%,0);
+	}
+}
+
+
+
+
+
+
+
+
+
 //////////////////////////////////////////////////////////////////////////////////////
 section{
 	display: none;
