--- a/css/style.css
+++ b/css/style.css
@@ -1925,14 +1925,12 @@ header {
 
 .load {
   width: 100%;
-  position: absolute;
-  bottom: 45%; }
+  position: absolute; }
   .load svg {
     display: block;
     margin: 0 auto;
     fill: none;
-    width: 80px;
-    transform: scale(8); }
+    width: 630px; }
     .load svg .circlebg {
       stroke: #ccc;
       stroke-width: 1; }
@@ -1944,7 +1942,7 @@ header {
   opacity: 1;
   animation: animInitialHeader 1s cubic-bezier(0.7, 0, 0.3, 1) both; }
 
-.start .load {
+.start .load svg {
   animation: load-start-expand 0.5s ease 1.1s both; }
 
 @keyframes animInitialHeader {
@@ -1967,7 +1965,7 @@ header {
 .end .logo {
   animation: logo-move-up 1s cubic-bezier(0.7, 0, 0.3, 1) both; }
   .end .logo svg {
-    animation: svg-fx 1s linear both; }
+    animation: svg-fx 0.8s linear both; }
 
 .end .load svg {
   animation: remove-load 1s ease both; }
@@ -1988,29 +1986,37 @@ header {
 
 @keyframes svg-fx {
   to {
-    width: 250px;
+    transform: scale(0.7);
     fill: #fff; } }
 
 @keyframes logo-move-up {
   to {
     transform: translate3d(0, 10%, 0); } }
 
-section {
+.inner-container {
+  background-color: #fd357a;
   display: none; }
 
-nav {
-  width: 100%; }
-  nav .main-nav {
-    display: flex;
-    width: 60%;
-    border: 1px solid yellow; }
-    nav .main-nav li {
-      width: 33.33333%;
-      border: 1px solid red; }
-      nav .main-nav li a {
-        border: 1px solid blue;
-        display: block;
-        padding: 10px;
-        text-align: center; }
+nav .main-nav {
+  margin: 0 auto;
+  width: 60%; }
+  nav .main-nav li {
+    width: 33.33333%;
+    padding: 0; }
+    nav .main-nav li a {
+      display: block;
+      padding: 10px;
+      text-align: center; }
+
+footer {
+  height: 15%;
+  border-top: 1px solid rgba(0, 0, 0, 0.14);
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  font-weight: 300;
+  color: #74777B;
+  font-style: normal; }
+  footer p:last-child {
+    font-size: 0.8em; }
 
 /*# sourceMappingURL=style.css.map */
