--- a/css/style.scss
+++ b/css/style.scss
@@ -1,137 +1,4 @@
-@import '_normalize.scss';
-@import '_grid.scss';
-$blue:#fd357a;
-$blue2:darken($blue,15%);
-ul{
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-a{
-	text-decoration: none;
-	color:black;
-}
-///////////////////////////////////////////////////////////////////////////////////////
-header{
-	height:100%;
-	width:100%;
-	z-index: 100;
-	position: fixed;
-	background-color: #f1f1f1;
-}
-.logo{
-	position: absolute;
-	transform: translate3d(0,77%,0);
-	width: 100%;
-	svg{
-		width: 25%;
-		display: block;
-		margin: 0 auto;
-		fill:$blue;
-	}
-}
-.load{
-	width: 100%;
-	position: absolute;
-	
-	svg{
-		display: block;
-		margin: 0 auto;
-		fill:none;
-		width: 630px;
-		
-		.circlebg{
-			stroke:#ccc;
-			stroke-width:1;
-		}
-		.circle{
-			stroke:$blue2;
-			stroke-width:1;
-		}
-			
-	}
-}
-///////////////////////////////////////////////////////////////////////////////////////
-.start .logo,
-.start .load {
-    opacity: 1;
-    animation: animInitialHeader 1s cubic-bezier(0.7,0,0.3,1) both;
-}
- .start .load svg{
-	 animation: load-start-expand .5s ease 1.1s both;
- }
-@keyframes animInitialHeader {
-    from {
-        opacity: 0;
-        transform: translate3d(0,800px,0);
-    }
-}
-@keyframes load-start-expand {
-    from {
-        opacity: 0;
-        transform: scale(0);
-    }
-}
-
-.start .circle{
-	animation: loading-fx 3s cubic-bezier(.17,.67,.87,.17) 1.8s both;
-	
-}
-@keyframes loading-fx{
-	to{
-		stroke-dashoffset:0;
-	}
-}
-//////////////////////////////////////////////////////////////////////////////////////
-.end .logo{
-	animation:logo-move-up 1s cubic-bezier(0.7,0,0.3,1) both; 
-	svg{
-		animation: svg-fx .8s linear both;
-	}
-}
-
-.end .load svg{
-	animation: remove-load 1s ease both;
-
-	 .circlebg{
-		stroke:$blue2;
-	}
-}
-
-.end header{
-	animation: color-change 1s linear both;
-}
-@keyframes remove-load {
-	to{
-		transform: scale(0);
-		opacity: 0;
-	}
-}
-@keyframes color-change {
-	to{
-		background-color: $blue;
-	}
-}
-@keyframes svg-fx {
-	to{
-		transform: scale(.7);
-		fill:#fff;
-	}
-}
-
-@keyframes logo-move-up{
-	to{
-		transform: translate3d(0,10%,0);
-	}
-}
-
-
-
-
-
-header{
-
-}
+@import '_start-animation.scss';
 
 
 
@@ -140,7 +7,7 @@ header{
 //////////////////////////////////////////////////////////////////////////////////////
 .inner-container{
 	background-color: $blue;
-	display: none;
+	
 }
 nav{
 	
@@ -160,13 +27,83 @@ nav{
 		}
 	}
 }
+.section1{
+	p{
+		font-family: 'Open Sans Condensed', sans-serif;
+	}
+}
+//////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////
+.section2{
+	li:first-child{
+		margin-right: 20px;
+	}
+	li{
+		background-color: #fff;	
+		overflow: hidden;
+		width:500px;
+		padding:0;
+		a{
+			display: block;
+			position:relative;
+			p,div{
+				position: absolute;
+				padding: 0;
+				margin:0;
+				transition: all .3s ease;
+			}
+			p{
+				z-index: 200;
+				text-align: center;
+				width: 100%;
+				font-size:1.6em;
+				font-weight: 500;
+				font-family: 'Open Sans', sans-serif;
+				bottom:-15%;
+				color:#f1f1f1;
+				
+			}
+			div:nth-child(3){
+				height:1%;
+				z-index: 200;
+				width:80%;
+				left:10%;
+				background-color: #f1f1f1;
+				top:-2%;
+			}
+			div:last-child{
+				height: 100%;
+				top:0;
+				z-index: 150;
+				width:100%;
+				background-color: hsla(0, 0%, 0%, 0.19);
+				opacity: 0;
+			}
+			img{
+				
+			}
+		}
+	}
+	li:hover{
+		p{
+			bottom:50%;
+		}
+		div:nth-child(3){
+			top:60%;
+		}
+		div:last-child{
+			opacity: 1;
+		}
+	}
+}
+
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 footer{
 	height:15%;
 	border-top: 1px solid rgba(0, 0, 0, 0.14);
-	font-family: 'Josefin Sans', sans-serif;
 	text-align:center;
 	font-weight:300;
 	color:#74777B;
