--- a/css/_start-animation.scss
+++ b/css/_start-animation.scss
@@ -1,6 +1,6 @@
 @import '_normalize.scss';
 @import '_grid.scss';
-$blue:#fd357a;
+$blue:#fa5d87;
 $blue2:darken($blue,15%);
 ul{
 	padding: 0;
@@ -61,7 +61,7 @@ header{
     animation: animInitialHeader 1s cubic-bezier(0.7,0,0.3,1) both;
 }
  .start .load svg{
-	 animation: load-start-expand .5s ease 1.1s both;
+	 animation: load-start-expand .7s ease 1.1s both;
  }
 @keyframes animInitialHeader {
     from {
@@ -141,6 +141,9 @@ header{
 	top:100%;
 	width: 100%;
 	padding-top: 300px;
+}
+.hideload .load{
+	display: none;
 }
 
 
