--- a/css/style.scss
+++ b/css/style.scss
@@ -1,33 +1,92 @@
 @import '_start-animation.scss';
-
-
-
+@import '_icon.scss';
+$work-color:#ededed;
+$bg:hsla(0, 0%, 100%, 0.88);
+$menu-color:darken(complement($blue),30%);
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 .inner-container{
-	background-color: $blue;
-	
+	background: $blue;
+	background-size:cover;
+}
+section{
+		background-color: $bg;
+	border-radius: 10px;
 }
 nav{
 	
-	
+	background-color: $bg;
 	 .main-nav{
 		 margin: 0 auto;
-		width:60%;
+		 display: flex;
 		 
+		width:60%;
+		 li:first-child{
+			 position: relative;
+			 
+		 }
 		li{
 			width: 33.3333333333%;
 			padding: 0;
+			div{
+				transition:all .3s ease-out;
+			 position: absolute;
+			 height:3px;
+			 width:100%;
+			 bottom: 0;
+			 background-color: $menu-color;
+		 }
 			a{
+				cursor: pointer;
+				
+				font-family: 'Open Sans Condensed', sans-serif;
 				display: block;
-				padding:10px;
+				padding:20px 10px;
+				font-size:1.4em;
 				text-align: center;
+				position: relative;
+
 			}
+				[class^="icon-"]:before{
+					position: absolute;
+					left:20%;
+					font-family: 'icomoon';
+					top:32%;
+				}
 		}
 	}
+	
+}
+		 .move1 .move{
+			 height:3px;
+				 left:100%;
+			 
+		 }
+		  .move2 .move{
+			height:3px;
+				 left:200%;
+			 
+		 }
+.move{
+	left:0;
+}
+li:hover a{
+	color:$menu-color;
+}
+//////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////
+
+.title{
+	text-align: center;
+	margin:60px 0;
+	color:#fff;
+	font-size: 4.5em;
+	font-family: 'Shadows Into Light', cursive;
 }
 .section1{
+
 	p{
 		font-family: 'Open Sans Condensed', sans-serif;
 	}
@@ -36,9 +95,7 @@ nav{
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 .section2{
-	li:first-child{
-		margin-right: 20px;
-	}
+
 	li{
 		background-color: #fff;	
 		overflow: hidden;
@@ -59,9 +116,10 @@ nav{
 				width: 100%;
 				font-size:1.6em;
 				font-weight: 500;
-				font-family: 'Open Sans', sans-serif;
+				font-family: 'Poiret One', cursive;
 				bottom:-15%;
-				color:#f1f1f1;
+				font-weight: bold;
+				color:$work-color;
 				
 			}
 			div:nth-child(3){
@@ -69,7 +127,7 @@ nav{
 				z-index: 200;
 				width:80%;
 				left:10%;
-				background-color: #f1f1f1;
+				background-color: $work-color;
 				top:-2%;
 			}
 			div:last-child{
@@ -77,7 +135,7 @@ nav{
 				top:0;
 				z-index: 150;
 				width:100%;
-				background-color: hsla(0, 0%, 0%, 0.19);
+				background-color: hsla(0, 0%, 0%, 0.39);
 				opacity: 0;
 			}
 			img{
@@ -86,6 +144,7 @@ nav{
 		}
 	}
 	li:hover{
+		
 		p{
 			bottom:50%;
 		}
@@ -102,12 +161,18 @@ nav{
 //////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////
 footer{
+	margin-top:20px;
 	height:15%;
 	border-top: 1px solid rgba(0, 0, 0, 0.14);
 	text-align:center;
 	font-weight:300;
-	color:#74777B;
+	font-family: 'Open Sans Condensed', sans-serif;
+	color:#fff;
 	font-style:normal;
+	p:first-child{
+		padding: 10px 0;
+		margin:0;
+	}
 	p:last-child{
 		font-size:.8em;
 		}
